tests/NormalTests/paczka1/small_fuzzy/58904081.err
Error in line 3: 7VNTNST S152 69,7
Error in line 6: 7VNTNST S17 86,0
Error in line 12: Z3HK37BKad A675 68,98
